[package]
name = "supporter-role-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
rocket = "0.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.37"
reqwest = { version = "0.12.4", features = ["json"] }
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.117"
